# AI_Games

./: how to use cmake.txt
ai lab/lab1-cpp-raylib/part2/: CMakeLists.txt  raylib1-fullscreen.cpp  raylib1.cpp  raylib2.cpp
ai_Lab_week7/src/chatbots/: CMakeLists.txt
ai_Lab_week7/src/chatbots/src/: 01-hello.cpp  02-images.cpp  03-completions.cpp  04-chatbot.cpp  05-raylib-chatbot.cpp  CMakeLists.txt  openai-helper.hpp
ai_lab_8_computervision/src/: 00_opencv_version.cpp  01_show_colour.cpp  02_show_image.cpp  03_capture_show_image.cpp  04_capture_show_video.cpp  05_capture_show_video_record.cpp  06_capture_show_video_grab_image.cpp  07_simple_facerec_eigenfaces.cpp  CMakeLists.txt
ai_lab_week9/opencv_essentials_book/: CMakeLists.txt  setup_data.sh
ai_lab_week9/opencv_essentials_book/packtpub/: code_samples.txt
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_01_Code/flipImage/: flipImage.cpp  flipImage.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_01_Code/recLiveVid/: recLiveVid.cpp  recLiveVid.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_01_Code/showVideo/: showVideo.cpp  showVideo.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_02_Code/drawRs/: drawR.cpp  drawR.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_02_Code/drawThings/: drawThings.cpp  drawThings.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_02_Code/propertyDlgButtons/: propertyDlgButtons.cpp  propertyDlgButtons.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_02_Code/tbarContrast/: tbContrast.cpp  tbContrast.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_02_Code/tbarContrastCallB/: tbContrastCallB.cpp  tbContrastCallB.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/BrightnessContrast/: BrightnessContrast.cpp  BrightnessContrast.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/EqualizeHist_Demo/: EqualizeHist_Demo.cpp  EqualizeHist_Demo.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/Filter_Retina/: Filter_Retina.cpp  Filter_Retina.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/Geometrical_Transforms/: Geometrical_Transforms.cpp  Geometrical_Transforms.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/ImgHisto/: ImgHisto.cpp  ImgHisto.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/LinearBlend/: LinearBlend.cpp  LinearBlend.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/color_channels/: color_channels.cpp  color_channels.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_03_Code/histMatching/: histMatching.cpp  histMatching.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_04_Code/connectedComponents/: connectedComponents.cpp  connectedComponents.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_04_Code/floodFill/: floodFill.cpp  floodFill.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_04_Code/grabcut/: grabcut.cpp  grabcut.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_04_Code/lineSegmentDetector/: lineSegmentDetector.cpp  lineSegmentDetector.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_04_Code/thresholding/: thresholding.cpp  thresholding.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_04_Code/watershed/: watershed.cpp  watershed.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_05_Code/FASTDetector/: FASTDetector.cpp  FASTDetector.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_05_Code/KAZEDetector/: KAZEDetector.cpp  KAZEDetector.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_05_Code/ORBDetector/: ORBDetector.cpp  ORBDetector.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_05_Code/SURFDetector/: SURFDetector.cpp  SURFDetector.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_05_Code/matchingAKAZE/: matchingAKAZE.cpp  matchingAKAZE.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_05_Code/matchingSURF/: matchingSURF.cpp  matchingSURF.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_06_Code/latentDetection/: latentDetection.pro  main.cpp
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_06_Code/pedestrianDetection/: main.cpp  pedestrianDetection.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_06_Code/textDetection/: main.cpp  textDetection.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/backgroundSubKNN/: backgroundSubKNN.cpp  backgroundSubKNN.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/findTransformECC/: findTransformECC.cpp  findTransformECC.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/maxMovementFarneback/: maxMovementFarneback.cpp  maxMovementFarneback.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/maxMovementLK/: maxMovementLK.cpp  maxMovementLK.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/motionGradient/: motionGradient.cpp  motionGradient.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/motionHistory/: motionHistory.cpp  motionHistory.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/trackingCamShift/: trackingCamShift.cpp  trackingCamShift.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/trackingMeanShift/: trackingMeanShift.cpp  trackingMeanShift.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_07_Code/videoCamera/: videoCamera.cpp  videoCamera.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_08_Code/KNNClassifier/: KNNClassifier.cpp  KNNClassifier.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_08_Code/RFClassifier/: RFClassifier.cpp  RFClassifier.pro
ai_lab_week9/opencv_essentials_book/packtpub/4244OS_08_Code/SVMClassifier/: SVMClassifier.cpp  (+1 more)
ai_lab_week9/optflow-opencv/: CMakeLists.txt  lkdemo.cpp  simple_fback.cpp
week_10/code/: 01-scarfy.cpp  02-sprite-class.cpp  03-chrono-sleep.cpp  04-async-wait.cpp  05-async-wait-param.cpp  06-async-wait-param-ref.cpp  07-async-wait-param-ref-member.cpp  08-async-wait-param-ref-member-while.cpp  09-raylib-concurrency.cpp  CMakeLists.txt
(+19 files in other folders)
